--- a/src/Contents/Resources/webapp.css
+++ b/src/Contents/Resources/webapp.css
@@ -35,5 +35,11 @@
 
 .bridge
 {
-	background-image: url(webapp/bridge.png)
+	background-image: url(webapp/bridge.png);
+	border: 1px solid black;
+	width: 250px;
+	height: 250px;
+	background-repeat:no-repeat;
+	background-position:center center;	
+	background-size: 250px 250px;
 }
