--- a/src/Contents/Resources/webapp.css
+++ b/src/Contents/Resources/webapp.css
@@ -41,3 +41,8 @@
 	background-position:center center;	
 	background-size: 250px 141px;
 }
+
+.map_ico
+{
+	background-image: url(webapp/map_32.png)
+}
