--- a/src/Contents/Resources/webapp.css
+++ b/src/Contents/Resources/webapp.css
@@ -60,6 +60,10 @@
 	background-image: url(webapp/items.png)
 }
 
+.table {
+	background-image: url(webapp/tables.png)	
+}
+
 .timeline {
   list-style: none;
 }
